--- a/bank-api/.gitignore
+++ b/bank-api/.gitignore
@@ -1,3 +1,5 @@
+
+
 # compiled output
 /dist
 /node_modules
@@ -6,7 +8,6 @@
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
@@ -33,3 +34,12 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.history/
+.docker/dbdata
+.docker/dbdatabbx
+.docker/dbdatacter
+dist-bbx
+dist-cter
+
+.env
