--- a/bank-api/docker-compose.yaml
+++ b/bank-api/docker-compose.yaml
@@ -31,6 +31,9 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@user.com
       - PGADMIN_DEFAULT_PASSWORD=123123
+    volumes:
+      - ./servers.json:/pgadmin4/servers.json
+      - ./pgpass:/pgpass
     ports:
       - "9001:80"
     depends_on:
