--- a/bank-api/package.json
+++ b/bank-api/package.json
@@ -23,12 +23,16 @@
     "console": "ts-node -r tsconfig-paths/register src/console.ts"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.6.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.4.4",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "chalk": "^4.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "nestjs-console": "^7.0.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
